Opening texture paint tab causes immediate crash #62874

Closed
opened 2019-03-23 08:05:18 +01:00 by Raaj Chatterjee · 5 comments

System Information
Operating system: Mac OS Mojave 10.14.1
Graphics card: Onboard Graphics, Macbook Pro 13" 2018, 8GB RAM

Blender Version
Broken: 0.80 2019-03-19
(example: 2.79b release)
(example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Opening up the texture paint tab while working on this file causes blender to crash immediately.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Open file, go to texture paint tab.testing2p8.blend

**System Information** Operating system: Mac OS Mojave 10.14.1 Graphics card: Onboard Graphics, Macbook Pro 13" 2018, 8GB RAM **Blender Version** Broken: 0.80 2019-03-19 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Opening up the texture paint tab while working on this file causes blender to crash immediately. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Open file, go to texture paint tab.[testing2p8.blend](https://archive.blender.org/developer/F6868694/testing2p8.blend)

Added subscriber: @raajc

Added subscriber: @raajc
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2019-03-25 14:38:16 +01:00
Member

Seems to be related to missing texture in workbench engine. Will investigate.

Seems to be related to missing texture in workbench engine. Will investigate.

This issue was referenced by blender/blender@aa0c864d48

This issue was referenced by blender/blender@aa0c864d4878a2483775d766c87fb41491138d10
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#62874
No description provided.